# accelerate-cmp

./: .gitignore  accelerate-cmp.cabal
src/Data/Array/Accelerate/: Cmp.hs
