name:                accelerate-cmp
version:             0.14.0.0
synopsis:            Framework for testing accelerate
description:         Support for running multiple accelerate back ends at the same time.
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          Andy Gill <andygill@ku.edu>
copyright:           (C) 2013 The University of Kansas
category:            Codec
build-type:          Simple
cabal-version:       >=1.8


flag cuda
  description: compile and support the CUDA backend
  default: False


library
  exposed-modules:
                Data.Array.Accelerate.Cmp

  build-depends:
                base == 4.6.*,
                accelerate     == 0.14.*

  if flag(cuda)
    cpp-options: -DUSE_CUDA
    build-depends: accelerate-cuda == 0.14.*

  hs-source-dirs: src
